--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "esModuleInterop": true,
   "scripts": {
     "dev": "tsx --watch src/index.ts",
-    "start": "node --env-file .env dist/index.js",
+    "start": "node dist/index.js",
     "build": "tsc -p tsconfig.build.json",
     "type-check": "tsc --noEmit",
     "lint": "eslint .",
