--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,6 @@
     "react-scripts": "^5.0.1",
     "resolve-url-loader": "^5.0.0",
     "svgo": "^3.3.2",
-    "typescript": "^3.9.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -48,9 +47,11 @@
   "devDependencies": {
     "@playwright/test": "^1.51.1",
     "@types/jest": "^29.5.14",
+    "prettier": "^3.5.3",
     "stylelint": "^16.17.0",
     "stylelint-config-standard": "^37.0.0",
     "stylelint-order": "^6.0.4",
-    "tsx": "^4.19.3"
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.2"
   }
 }
