--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@playwright/test": "^1.51.1",
     "@types/jest": "^29.5.14",
+    "eslint-plugin-prettier": "^5.2.5",
     "prettier": "^3.5.3",
     "stylelint": "^16.17.0",
     "stylelint-config-standard": "^37.0.0",
